--- a/app/views/members/community.html.erb
+++ b/app/views/members/community.html.erb
@@ -6,19 +6,19 @@
         <div class="title"><h1>HAPPENING NOW</h1></div>
         <div class="row-fluid" id="status">
             <div>
-                <span class="icon-active-members"></span><strong>72,475</strong>ACTIVE MEMBERS
+                <span class="icon-active-members"></span><strong><%= @stats['members'] %></strong>ACTIVE MEMBERS
             </div>
             <div>
-                <span class="icon-competing-today"></span><strong>2,580</strong>COMPETING TODAY
+                <span class="icon-competing-today"></span><strong><%= @stats['competing'] %></strong>COMPETING TODAY
             </div>
             <div>
-                <span class="icon-available-prize-money"></span><strong>$16,750</strong>AVAILABLE PRIZE MONEY
+                <span class="icon-available-prize-money"></span><strong><%= number_to_currency(@stats['money_up_for_grabs'], :precision => 0) %></strong>AVAILABLE PRIZE MONEY
             </div>
             <div>
-                <span class="active-challenges"></span><strong>21</strong>ACTIVE CHALLENGES
+                <span class="active-challenges"></span><strong><%= @stats['challenges_open'] %></strong>ACTIVE CHALLENGES
             </div>
             <div>
-                <span class="counteries-working"></span><strong>09</strong>COUNTRIES WORKING
+                <span class="counteries-working"></span><strong><%= @stats['countries_working'] %></strong>COUNTRIES WORKING
             </div>
         </div>
         <br/>
