--- a/app/views/challenges/_discussions.html.erb
+++ b/app/views/challenges/_discussions.html.erb
@@ -3,9 +3,15 @@
   <% comment.replies.each do |reply| %>
     <%= render partial: "comment", locals: {comment: reply} %>
   <% end %>
+  <% if comment.id == params[:reply_to] %>
+    <div class="reply-form">
+      <%= render partial: "new_comment", locals: {challenge: challenge} %>
+    </div>
+  <% end %>
 <% end %>
 
 <hr/>
 
-<h4> Post a <%= params[:reply_to] ? "Reply" : "Comment" %> </h4>
-<%= render partial: "new_comment", locals: {challenge: challenge} %>
+<% if params[:reply_to].blank? %>
+  <%= render partial: "new_comment", locals: {challenge: challenge} %>
+<% end %>
