--- a/app/views/challenges/_new_comment.html.erb
+++ b/app/views/challenges/_new_comment.html.erb
@@ -1,4 +1,5 @@
 <% if signed_in? %>
+  <h4> Post a <%= params[:reply_to] ? "Reply" : "Comment" %> </h4>
   <%= form_tag comment_challenge_path(challenge), class: "new-comment", id: "new-comment-form" do %>  
     <%= hidden_field_tag "comment[membername]", current_user.username %>
     <%= hidden_field_tag "comment[reply_to]", params[:reply_to] if params[:reply_to] %>
