--- a/app/views/members/community.html.erb
+++ b/app/views/members/community.html.erb
@@ -9,7 +9,7 @@
                 <span class="icon-active-members"></span><strong><%= @stats['members'] %></strong>ACTIVE MEMBERS
             </div>
             <div>
-                <span class="icon-competing-today"></span><strong><%= @stats['competing'] %></strong>COMPETING TODAY
+                <span class="icon-competing-today"></span><strong><%= @stats['competing_today'] %></strong>COMPETING TODAY
             </div>
             <div>
                 <span class="icon-available-prize-money"></span><strong><%= number_to_currency(@stats['money_up_for_grabs'], :precision => 0) %></strong>AVAILABLE PRIZE MONEY
