refreshes from box

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
                       <div class="btn"><input type="submit" class="btn" value="LOGIN"></div>
                   </form>
               </div>
-              <div>
+              <div class="login-using">
                   <span class="pull-left">LOGIN USING</span>
                   <ul class="unstyled inline">
                       <li><a href="/auth/github" class="circle-orange"><span class="github">github</span></a></li>
@@ -43,8 +43,8 @@
                       <li><a href="/auth/salesforce" class="circle-orange"><span class="salesforce">salesforce</span></a></li>
                   </ul>
               </div>
-              <div>
-                  <a href="#register-modal" data-toggle="modal">FORGOT PASSWORD?</a>
+              <div class="forgot-pwd">
+                  <a href="#forgot-password-modal" data-toggle="modal">FORGOT PASSWORD?</a>
               </div>
               <div class="last">
                   <a href="#register-modal" data-toggle="modal" class="btn btn-grey"><span>REGISTER</span></a>
