--- a/app/assets/stylesheets/base.css
+++ b/app/assets/stylesheets/base.css
@@ -1020,7 +1020,7 @@ textarea,
 }
 
 textarea {
-  width: 513px;
+  width: 470px;
   height: auto;
   height: 124px;
   resize: none;
@@ -1178,27 +1178,48 @@ textarea::-webkit-input-placeholder {
 }
 
 .input-mini {
-  width: 60px;
+  width: 60px !important;
+  padding: 0 !important;
 }
 
 .input-small {
-  width: 90px;
+  width: 100px !important;
+  padding: 0 !important;
 }
 
 .input-medium {
-  width: 150px;
+  width: 150px !important;
+  padding: 0 !important;
 }
 
 .input-large {
-  width: 210px;
+  width: 203px !important;
+  padding: 0 !important;
 }
 
 .input-xlarge {
-  width: 270px;
+  width: 290px !important;
+  padding: 0 !important;
 }
 
 .input-xxlarge {
-  width: 530px;
+  width: 470px !important;
+  padding: 0 !important;
+}
+
+.input-xxxlarge {
+  width: 520px !important;
+  padding: 0 !important;
+}
+
+.select-medium {
+  width: 130px !important;
+  padding: 0 !important;
+}
+
+.select-xxxlarge {
+  width: 500px !important;
+  padding: 0 !important;
 }
 
 input[class*="span"],
@@ -1496,6 +1517,7 @@ legend + .control-group {
   *padding-left: 20px;
   margin-left: 180px;
   *margin-left: 0;
+  line-height: 38px;
 }
 
 .form-horizontal .controls:first-child {
@@ -1958,16 +1980,21 @@ legend + .control-group {
           box-shadow: none;
 }
 
-.btn:hover {
+.btn:hover,
+.btn.hover {
   color: #ffffff;
   text-decoration: none;
   background-position: right -39px;
 }
 
 .btn:hover button,
+.btn.hover button,
 .btn:hover input[type="submit"],
+.btn.hover input[type="submit"],
 .btn:hover input[type="reset"],
-.btn:hover span {
+.btn.hover input[type="reset"],
+.btn:hover span,
+.btn.hover span {
   background-position: left -39px;
 }
 
@@ -2075,15 +2102,20 @@ legend + .control-group {
   background-position: right -78px;
 }
 
-.btn-grey:hover {
+.btn-grey:hover,
+.btn-grey.hover {
   color: #de7a20;
   background-position: right -117px;
 }
 
 .btn-grey:hover button,
+.btn-grey.hover button,
 .btn-grey:hover input[type="submit"],
+.btn-grey.hover input[type="submit"],
 .btn-grey:hover input[type="reset"],
-.btn-grey:hover span {
+.btn-grey.hover input[type="reset"],
+.btn-grey:hover span,
+.btn-grey.hover span {
   background-position: left -117px;
 }
 
@@ -2310,7 +2342,7 @@ legend + .control-group {
 
 .alert {
   padding: 8px 35px 8px 14px;
-  margin: 30px;
+  margin-bottom: 20px;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
   background-color: #fcf8e3;
   border: 1px solid #fbeed5;
@@ -2464,13 +2496,29 @@ legend + .control-group {
   text-align: right;
 }
 
-.modal {
+.modal-backdrop {
   position: fixed;
-  top: 50px;
+  top: 0;
+  left: 0;
+  z-index: 200;
+  width: 100%;
+  height: 100%;
+  background: #000;
+}
+
+.modal-backdrop.fade.in {
+  opacity: 0.7;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=70)";
+      filter: alpha(opacity=70);
+}
+
+.modal {
+  position: absolute;
+  top: 100px;
   left: 50%;
   z-index: 1050;
-  width: 1040px;
-  margin-left: -520px;
+  width: 866px;
+  margin-left: -433px;
   outline: none;
 }
 
@@ -2926,6 +2974,7 @@ legend + .control-group {
 }
 
 .nav-wrapper {
+  margin-bottom: 30px;
   clear: both;
 }
 
@@ -2960,14 +3009,20 @@ legend + .control-group {
   margin-bottom: 15px;
 }
 
+.footer-wrapper .links {
+  margin-top: 10px;
+}
+
 a.circle-orange,
 .prev,
 .next {
-  display: block;
+  display: inline-block;
+  *display: inline;
   width: 39px;
   height: 39px;
   overflow: hidden;
   background: url("/assets/circle_orange.png") no-repeat;
+  *zoom: 1;
 }
 
 .circle-orange:hover {
@@ -2977,53 +3032,14 @@ a.circle-orange,
 .circle-orange span,
 .next span,
 .prev span {
-  display: block;
+  display: inline-block;
+  *display: inline;
   width: 39px;
   height: 39px;
   text-indent: -1000px;
   background-image: url("/assets/icons.png");
   background-repeat: no-repeat;
-}
-
-a.circle-orange-large {
-  display: block;
-  width: 71px;
-  height: 71px;
-  overflow: hidden;
-  background: url("/assets/circle_orange.png") -39px 0 no-repeat;
-}
-
-a.circle-orange-large:hover {
-  background-position: -39px -71px;
-}
-
-a.circle-orange-large span {
-  display: block;
-  width: 71px;
-  height: 71px;
-  text-indent: -1000px;
-  background-image: url("/assets/icons.png");
-  background-repeat: no-repeat;
-}
-
-a.circle-orange-large .github {
-  background-position: -304px 0;
-}
-
-a.circle-orange-large .twitter {
-  background-position: -304px -71px;
-}
-
-a.circle-orange-large .facebook {
-  background-position: -304px -142px;
-}
-
-a.circle-orange-large .googleplus {
-  background-position: -304px -213px;
-}
-
-a.circle-orange-large .salesforce {
-  background-position: -304px -284px;
+  *zoom: 1;
 }
 
 .next span {
@@ -3060,6 +3076,18 @@ a.circle-orange-large .salesforce {
 
 .googleplus-small {
   background-position: -375px -195px;
+}
+
+.email {
+  background-position: -375px -234px;
+}
+
+.print {
+  background-position: -375px -273px;
+}
+
+.add {
+  background-position: -375px -312px;
 }
 
 .pagination .circle-orange {
@@ -3217,83 +3245,6 @@ h1.rss {
 /* -------------
  * Textarea
  * ------------- */
-
-table.jqTransformTextarea td#jqTransformTextarea-mm textarea {
-  font-size: 12px;
-  line-height: 16px;
-}
-
-table.jqTransformTextarea td {
-  width: 5px;
-  height: 5px;
-  padding: 0;
-  margin: 0;
-  font-size: 1px;
-  line-height: 1px;
-}
-
-table.jqTransformTextarea {
-  margin-left: -3px;
-}
-
-table.jqTransformTextarea tr {
-  /*border: 1px solid red;*/
-
-}
-
-table.jqTransformTextarea textarea {
-  padding: 0;
-  margin: 0;
-  background: none;
-  border: 0;
-}
-
-table.jqTransformTextarea td#jqTransformTextarea-tl {
-  background: url(/assets/input.png) no-repeat top left;
-}
-
-table.jqTransformTextarea td#jqTransformTextarea-tm {
-  border-top: 1px solid #d1d1d1;
-}
-
-table.jqTransformTextarea td#jqTransformTextarea-tr {
-  background: url(/assets/input.png) no-repeat top right;
-}
-
-table.jqTransformTextarea td#jqTransformTextarea-ml {
-  border-left: 1px solid #d1d1d1;
-}
-
-table.jqTransformTextarea td#jqTransformTextarea-mr {
-  border-right: 1px solid #d1d1d1;
-}
-
-table.jqTransformTextarea td#jqTransformTextarea-bl {
-  background: url(/assets/input.png) no-repeat bottom left;
-}
-
-table.jqTransformTextarea td#jqTransformTextarea-bm {
-  border-bottom: 1px solid #d1d1d1;
-}
-
-table.jqTransformTextarea td#jqTransformTextarea-br {
-  background: url(/assets/input.png) no-repeat bottom right;
-}
-
-table.jqTransformTextarea .jqTransformSafariTextarea div {
-  position: relative;
-  overflow: hidden;
-  border: 0 solid red;
-}
-
-table.jqTransformTextarea .jqTransformSafariTextarea textarea {
-  position: absolute;
-  top: -10px;
-  left: -10px;
-  padding: 10px 10px 10px 10px;
-  background: none;
-  resize: none;
-}
 
 /* -------------
  * Radios
@@ -3600,6 +3551,11 @@ h2.discussion {
   background: #1371bb !important;
 }
 
+h2.message {
+  color: #fff;
+  background: #535353 !important;
+}
+
 .case {
   position: relative;
   margin-bottom: 30px;
@@ -3828,19 +3784,19 @@ h2.discussion {
   background-position: 1px 0;
 }
 
-#quotes .scrollable {
+.quotes .scrollable {
   width: 942px;
   height: 125px;
 }
 
-#quotes .item {
+.quotes .item {
   width: 922px;
   height: 125px;
   padding-left: 20px;
   background: url("/assets/quote-l.png") left top no-repeat;
 }
 
-#quotes .item .quote {
+.quotes .item .quote {
   padding: 0 15px;
   padding-right: 20px;
   font-size: 20px;
@@ -3913,10 +3869,6 @@ h2.discussion {
   background: url("/assets/rect-orange.png") no-repeat;
 }
 
-#badges div:first-child {
-  margin-left: 0;
-}
-
 #badges div a {
   color: #ffffff;
 }
@@ -3955,6 +3907,10 @@ h2.discussion {
   background-position: -174px -160px;
 }
 
+#badges a:first-child div {
+  margin-left: 0;
+}
+
 .controls div {
   color: #d7d7d7;
 }
@@ -3984,7 +3940,7 @@ ul.inline a {
   border: 4px solid #d1d1d1;
 }
 
-.span8 h1 {
+.span8 > h1 {
   color: #787878;
 }
 
@@ -4231,4 +4187,420 @@ ul.inline a {
 
 .res li a span i.icon-team {
   background-position: -414px -706px;
+}
+
+#badges .box-blue {
+  width: 297px;
+}
+
+.row-fluid .box-blue:first-child {
+  margin-left: 0 !important;
+}
+
+.box-blue {
+  display: inline-block;
+  height: 129px;
+  padding-left: 3px;
+  margin-left: 60px !important;
+  background: url("/assets/box-blue.png") left top no-repeat !important;
+}
+
+.box-blue > div {
+  height: 129px;
+  padding-right: 3px;
+  margin-left: 0 !important;
+  background: url("/assets/box-blue.png") right -258px no-repeat !important;
+}
+
+.box-blue table {
+  height: 129px;
+  overflow: hidden;
+  background: url("/assets/box-blue.png") left -129px repeat-x;
+  border-collapse: collapse;
+}
+
+.box-blue table td {
+  display: table-cell;
+  color: #fff;
+  vertical-align: middle;
+}
+
+.box-blue table td span.icon {
+  display: inline-block;
+  width: 130px;
+  height: 80px;
+  vertical-align: middle;
+  background: url("/assets/icons.png") -174px 0 no-repeat;
+}
+
+.box-blue table td span.icon.badget-general {
+  background-position: -174px 0;
+}
+
+.post-pagination {
+  line-height: 30px;
+  background: #eeeeee;
+}
+
+.post-pagination a.pull-left {
+  padding-left: 20px;
+  margin-left: 5px;
+  background: url("/assets/arrow-left2.png") left center no-repeat;
+}
+
+.post-pagination a.pull-right {
+  padding-right: 20px;
+  margin-right: 5px;
+  background: url("/assets/arrow-right2.png") right center no-repeat;
+}
+
+.post .date {
+  float: left;
+  width: 46px;
+  height: 46px;
+  margin-right: 10px;
+  font-weight: bold;
+  line-height: 16px;
+  color: #fff;
+  text-align: center;
+  background: #d1d1d1;
+}
+
+.post .date span {
+  display: block;
+  width: 46px;
+  height: 30px;
+  font-size: 24px;
+  line-height: 30px;
+  background: #1371bb;
+}
+
+.badge {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.badge h3 {
+  font-weight: bold !important;
+}
+
+.badge .icon {
+  display: block;
+  width: 130px;
+  height: 80px;
+  margin: 0 auto;
+  background: url("/assets/badges.png");
+}
+
+.badge .icon.force-cook {
+  background-position: -260px 0;
+}
+
+.badge .icon.force-sous-chef {
+  background-position: -260px -80px;
+}
+
+.badge .icon.force-master-chef {
+  background-position: -260px -160px;
+}
+
+.badge .icon.cloud-foundry-apprentice {
+  background-position: -260px -240px;
+}
+
+.badge .icon.cloud-foundry-journeyman {
+  background-position: -260px -320px;
+}
+
+.badge .icon.cloud-foundry-blacksmith {
+  background-position: -260px -400px;
+}
+
+.badge .icon.boxer {
+  background-position: -260px -480px;
+}
+
+.badge .icon.box-featherweight {
+  background-position: -260px -560px;
+}
+
+.badge .icon.box-middleweight {
+  background-position: -260px -640px;
+}
+
+.badge .icon.box-heavyweight {
+  background-position: -260px -720px;
+}
+
+.badge .icon.general-cloudspoker {
+  background-position: 0 0;
+}
+
+.badge .icon.general-traveler {
+  background-position: 0 -80px;
+}
+
+.badge .icon.general-adventurer {
+  background-position: 0 -160px;
+}
+
+.badge .icon.general-ninja {
+  background-position: 0 -240px;
+}
+
+.badge .icon.general-samurai {
+  background-position: 0 -320px;
+}
+
+hr {
+  height: 1px;
+  background: #d1d1d1;
+  border: 0;
+}
+
+.col5 .badge {
+  float: left;
+  width: 18%;
+  margin-left: 20px;
+}
+
+.col5 .badge:first-child {
+  margin-left: 0;
+}
+
+.techs li {
+  padding: 0;
+}
+
+.techs a {
+  display: block;
+  width: 130px;
+  height: 118px;
+  overflow: hidden;
+  text-indent: -1000px;
+  background: url("/assets/badge-categories.png") no-repeat;
+}
+
+.techs a.force {
+  background-position: 0 0;
+}
+
+.techs a.gae {
+  background-position: -150px 0;
+}
+
+.techs a.aws {
+  background-position: -305px 0;
+}
+
+.techs a.vmware {
+  background-position: -450px 0;
+}
+
+.techs a.html5 {
+  background-position: -590px 0;
+}
+
+.techs a.ios {
+  background-position: -730px 0;
+}
+
+.techs a.android {
+  background-position: -884px 0;
+}
+
+.tip {
+  position: relative;
+  padding-left: 10px;
+  background: #eeeeee;
+  border: 1px solid #d1d1d1;
+}
+
+.tip .arrow {
+  position: absolute;
+  top: -14px;
+  left: 50px;
+  width: 27px;
+  height: 14px;
+  background: url("/assets/arrow-top.png") no-repeat;
+}
+
+.accordion-toggle {
+  padding-left: 10px;
+  background: url("/assets/arrow-down.png") left center no-repeat;
+}
+
+.accordion-toggle.collapsed {
+  background: url("/assets/arrow-small-right.png") left center no-repeat;
+}
+
+.accordion-inner {
+  padding-left: 20px;
+}
+
+.accordion-inner a {
+  padding-left: 10px;
+  background: url("/assets/arrow-small-right.png") left center no-repeat;
+}
+
+.subscribe .control-group {
+  margin-bottom: 10px;
+  *zoom: 1;
+}
+
+.subscribe .control-group:before,
+.subscribe .control-group:after {
+  display: table;
+  line-height: 0;
+  content: "";
+}
+
+.subscribe .control-group:after {
+  clear: both;
+}
+
+.subscribe label {
+  font-size: 14px;
+}
+
+.subscribe label.rss {
+  padding-left: 25px;
+  background: url("/assets/icon-rss.png") left center no-repeat;
+}
+
+.subscribe .jqTransformSelectWrapper {
+  margin-right: 0;
+}
+
+.subscribe select {
+  width: 150px;
+}
+
+.btn-file {
+  position: relative;
+}
+
+.btn-file input {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 40px;
+  background: transparent;
+  opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+      filter: alpha(opacity=0);
+}
+
+.paid .id {
+  display: inline-block;
+  *display: inline;
+  width: 250px;
+  *zoom: 1;
+}
+
+.paid .prize {
+  position: absolute;
+  right: 20px;
+  bottom: 20px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.paid .place {
+  position: absolute;
+  top: -12px;
+  right: 10px;
+  display: block;
+  width: 86px;
+  height: 81px;
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 65px;
+  color: #fff;
+  text-align: center;
+  background-image: url("/assets/place-bg-large.png");
+  background-position: left bottom;
+  background-repeat: no-repeat;
+}
+
+.paid .place.p1 {
+  background-position: 0 0;
+}
+
+.paid .place.p2 {
+  background-position: 0 -81px;
+}
+
+.paid .place.p3 {
+  background-position: 0 -162px;
+}
+
+.form-account label {
+  width: auto !important;
+  margin-left: 25px;
+}
+
+.form-account .controls {
+  float: left;
+  margin-left: 10px;
+}
+
+.form-account .jqTransformInputWrapper {
+  margin-right: 0;
+}
+
+.form-account .controls-row > div:first-child label {
+  width: 120px !important;
+  margin-left: 0;
+}
+
+.form-account .controls-row > div:first-child .controls {
+  float: none;
+  margin-left: 130px;
+}
+
+.btn-add-email {
+  margin-left: 10px;
+}
+
+.modal .placement a {
+  margin-top: 20px;
+}
+
+#review-modal .control-group > label {
+  width: 80px !important;
+}
+
+#review-modal .control-group .controls {
+  margin-left: 100px;
+}
+
+.rating .weight {
+  width: 5%;
+}
+
+.rating .desc {
+  width: 55%;
+}
+
+.rating .level {
+  width: 8%;
+}
+
+.rating .center {
+  padding-right: 4%;
+  text-align: center;
+}
+
+table.overview td {
+  padding-bottom: 10px;
+  vertical-align: top;
+}
+
+table.overview td.label {
+  width: 180px;
+}
+
+table.overview td.sep {
+  width: 30px;
 }
