--- a/app/assets/stylesheets/screen.css
+++ b/app/assets/stylesheets/screen.css
@@ -20,6 +20,17 @@ textarea {
 	border-radius: 5px;
 }
 
+.content-wrapper .container > .row-fluid > [class^="span"] > h2 small {
+	float: right;
+	line-height: 35px;
+	font-size: 13px;
+	padding-right: 10px;
+	font-weight: bold;
+	color: #787878;
+}
+
+
+
 /** header **/
 .loginbar-wrapper {
 	height: 59px;
@@ -209,36 +220,282 @@ ul.share li {
 	*display: inline;
 }
 
-.view-challenges { /* button in challenges_detail page */ 
+.right-button { /* button in challenges_detail page & member_profile page */ 
 	clear: both;
 	height: 40px;
 	padding: 10px 0;
 }
 
+/* member profile page */
+.member-profile .photo {
+	width: 132px;
+	height: 132px;
+}
+.member-profile .well {
+	background: transparent;
+	padding: 5px 0 0 0;
+	position: relative;
+	height: 135px;
+	margin-bottom: 0;
+}
+	.member-profile .well h2 a {
+		font-size: 21px;
+	}
+	.member-profile .well .top span {
+		font-size: 19px;
+	}
+	.member-profile .well .bottom {
+		position: absolute;
+		bottom: 0;
+		font-size: 19px;
+	}
+	.member-profile .span6 {
+		margin-left: 10px;
+	}
+	.member-profile .border-right {
+		width: 487px;
+		border-right: 1px solid #d1d1d1;
+	}
+	.member-profile h3 {
+		font-size: 19px;
+		font-weight: bold;
+		padding: 0 0 0 30px;
+	}
+	/* level */
+	.level {
+		position: relative;
+		margin: 10px;
+	}
+		.level .progress {
+			height: 43px;
+			width: 302px;
+			top: 10px;
+			left: 70px;
+			position: absolute;
+			background: url(/assets/level-progress.png) 0 0 no-repeat;
+		}
+		.level .from, .level .to {
+			display: block;
+			position: absolute;
+			width: 130px;
+			padding: 60px 0 0 0;
+			text-align: center;
+			height: 30px;
+			line-height: 30px;
+			font-size: 18px;
+			left: -10px;
+		}
+		.level .to {
+			left: 320px;
+		}
+		.level .to i {
+			display: block;
+			position: absolute;
+			width: 25px;
+			height: 31px;
+			top: 0;
+			right: 25px;
+			background: url(/assets/lock.png) 0 0 no-repeat;
+		}
+		.level .level3 {
+			background: url(/assets/level.png) 50% 0 no-repeat;
+		}
+		.level .level4-gray {
+			background: url(/assets/level.png) 50% -100px no-repeat;
+		}
+	/* end of level */
+
+.member-profile #quotes .item {
+	height: 25px;
+	text-align: center;
+	width: 800px;
+	margin: 40px auto;
+	padding-left: 5px;
+
+}
+	.member-profile #quotes .item .quote {
+		font-size: 24px;
+		line-height: 25px;
+	}
+
+ul.brief-info {
+	height: 67px;
+	margin: 18px 0 40px 0; 
+}
+	ul.brief-info li {
+		float: left;
+		width: auto;
+		width: 220px\0;
+		height: 67px;
+	}
+		ul.brief-info li img {
+			float: left;
+			display: inline;
+			width: auto;
+		}
+		ul.brief-info li .info {
+			float: left;
+			display: inline;
+			width: 90px;
+			padding: 12px 50px 0 6px;
+			padding-right: 20px\0;
+			line-height: 17px;
+		}
+		ul.brief-info li.wider {
+			width: 330px\0;
+		}
+		ul.brief-info li.wider .info {
+			width: 205px;
+		}
+			ul.brief-info li .info span {
+				font-size: 13px;
+			}
+			ul.brief-info li .info span.gray {
+				color: #d1d1d1;
+			}
+			ul.brief-info li .last {
+				padding-right: 0;
+			}
+
+.member-profile .stats {
+	margin: 25px 0 30px 0;
+	height: 80px;
+}
+	.member-profile .stat {
+		float: left;
+		width: 210px;
+		padding-left: 6px;
+	}
+	.member-profile .stat .place {
+		height: 20px;
+		margin-bottom: 10px;
+	}
+	.member-profile .stat .place span {
+		float: left;
+		width: auto;
+		margin-right: 3px;
+		height: 20px;
+		line-height: 20px;
+	}
+	.member-profile .stat .place span.label {
+		width: 76px;
+	}
+	.member-profile .stat .place span.count1 {
+		background: #FDB813;
+	}
+	.member-profile .stat .place span.count2 {
+		background: #cccccc;
+	}
+	.member-profile .stat .place span.count3 {
+		background: #C7B299;
+	}
+
+	.member-profile .stat p {
+		height: 20px;
+		line-height: 20px;
+		margin-bottom: 10px;
+	}
+
+	.member-profile .missions {
+		margin: 25px 10px 40px 20px;
+	}
+	.member-profile .missions .scrollable {
+		width: 560px;
+		height: 148px;
+		margin: 0 auto;
+	}
+		.member-profile .missions .item {
+			float: left;
+			width: 130px;
+			height: 148px;
+			background: #ebebeb;
+			margin-right: 10px;
+		}
+			.member-profile .missions .item span {
+				display: block;
+				text-align: center;
+				color: #787878;
+				line-height: 20px;
+				width: 110px;
+				margin: 3px auto;
+				font-size: 13px;
+			}
+				.member-profile .missions .item span.orange {
+					color: #de7a20;
+				}
+				.member-profile .missions .item span.first {
+					height: 40px;
+				}
+			.member-profile .missions .item img {
+				display: block;
+				width: 112px;
+				height: 72px;
+				margin: 0 auto;
+			}
+	.member-profile .slider {
+		position: relative;
+	}
+	.member-profile .slider .prev {
+		left: -10px;
+	}
+	.member-profile .slider .next {
+		right: 0;
+	}
+
+	.member-profile .recommendation {
+		padding: 0 0 0 10px;
+		height: 280px;
+	}
+		.member-profile .recommendation h4 {
+			margin-bottom: 30px;
+		}
+		.member-profile .recommendation textarea {
+			width: 640px;
+			margin-bottom: 30px;
+		}
+
+	.member-profile .span4 .content {
+		width: 280px;
+		margin: 0 0 0 15px;
+	}
+		.member-profile .span4 .slider .scrollable {
+			min-height: 350px;
+			*height: 350px;
+		} 
+	.member-profile .span4 p {
+		font-size: 13px;
+	}
+		.member-profile .span4 p .gray {
+			color: #d1d1d1;
+		}
+
+	.member-profile .span4 .slider {
+		margin: 0;
+	}
+		.member-profile .span4 .slider .prev {
+			left: 105px;
+			top: auto;
+			bottom: -40px;
+		}
+		.member-profile .span4 .slider .next {
+			right: 105px;
+			top: auto;
+			bottom: -40px;
+		}
+		.member-profile .span4 .scrollable .item {
+			width: 280px;
+			height: 300px;
+		}
+		.member-profile .span4 .total-link {
+			margin: 60px 0 20px 20px; 
+		}
+
+
+
+
 /* end of content */
 
-/* modal */
-.modal {
-	position: absolute;
-	top: 100px;
-}
-.modal-backdrop {
-	background: #000;
-	height: 100%;
-	width: 100%;
-	position: fixed;
-	top: 0;
-	left: 0;
-	z-index: 200;
-}
-.modal-backdrop.fade.in {
-	opacity: 0.7;
-}
 
-#register-modal {
-	width: 866px;
-	margin-left: -433px;
-}
 #register-modal .title {
 	margin-bottom: 0;
 }
@@ -252,7 +509,7 @@ ul.share li {
   	height: 71px;
 }
 	#register-modal ul.unstyled li {
-		width: 71px;
+		/*width: 71px;*/
 		*float: left;
 		*display: inline;
 	}
