fixed register button

--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -16,7 +16,6 @@
                 <a class="learn-more" href="/how-it-works-members">Or Learn More</a>
             </div>
         </div>
-
     </div> <!-- /.container -->
 </div>
 
@@ -26,8 +25,8 @@
     <div class="container">
 
         <div class="tab-large" id="res-swicher">
-            <a class="tab-left active" href="javascript:;" rel=".custumer-res"><span>Customers</span></a>
-            <a class="tab-right" href="javascript:;" rel=".member-res"><span>Members</span></a>
+            <a class="tab-left active" href="javascript:;" data-toggle=".custumer-res"><span>Customers</span></a>
+            <a class="tab-right" href="javascript:;" data-toggle=".member-res"><span>Members</span></a>
         </div>
 
         <div class="row-fluid res custumer-res">
@@ -71,12 +70,23 @@
 
 
         <div class="title"><h1>RECENTLY SHARED</h1></div>
-        <div id="quotes" class="slider">
+        <div class="quotes slider res custumer-res">
             <div class="scrollable">
                 <div class="items">
                     <div class="item"><div class="quote">I can’t tell you enough how blown away I am with this submission.  We launched this challenge with loose requirements Wednesday afternoon before Thanksgiving, and it was due first thing Monday morning (hence the premium purse) just in time for a pre-sale customer demo. This is a real testiament to the power of Cloudspokes!  Check out the video : <a href="#">http://vimeo.com/54417936</a>.</div></div>
                     <div class="item"><div class="quote">I can’t tell you enough how blown away I am with this submission.  We launched this challenge with loose requirements Wednesday afternoon before Thanksgiving, and it was due first thing Monday morning (hence the premium purse) just in time for a pre-sale customer demo. This is a real testiament to the power of Cloudspokes!  Check out the video : <a href="#">http://vimeo.com/54417936</a>.</div></div>
                     <div class="item"><div class="quote">I can’t tell you enough how blown away I am with this submission.  We launched this challenge with loose requirements Wednesday afternoon before Thanksgiving, and it was due first thing Monday morning (hence the premium purse) just in time for a pre-sale customer demo. This is a real testiament to the power of Cloudspokes!  Check out the video : <a href="#">http://vimeo.com/54417936</a>.</div></div>
+                </div>
+            </div>
+            <a href="#" class="prev"><span>Prev</span></a>
+            <a href="#" class="next"><span>Next</span></a>
+        </div>
+        <div class="quotes slider res member-res hide">
+            <div class="scrollable">
+                <div class="items">
+                    <div class="item"><div class="quote">Member Quote I can’t tell you enough how blown away I am with this submission.  We launched this challenge with loose requirements Wednesday afternoon before Thanksgiving, and it was due first thing Monday morning (hence the premium purse) just in time for a pre-sale customer demo. This is a real testiament to the power of Cloudspokes!  Check out the video : <a href="#">http://vimeo.com/54417936</a>.</div></div>
+                    <div class="item"><div class="quote">Member Quote I can’t tell you enough how blown away I am with this submission.  We launched this challenge with loose requirements Wednesday afternoon before Thanksgiving, and it was due first thing Monday morning (hence the premium purse) just in time for a pre-sale customer demo. This is a real testiament to the power of Cloudspokes!  Check out the video : <a href="#">http://vimeo.com/54417936</a>.</div></div>
+                    <div class="item"><div class="quote">Member Quote I can’t tell you enough how blown away I am with this submission.  We launched this challenge with loose requirements Wednesday afternoon before Thanksgiving, and it was due first thing Monday morning (hence the premium purse) just in time for a pre-sale customer demo. This is a real testiament to the power of Cloudspokes!  Check out the video : <a href="#">http://vimeo.com/54417936</a>.</div></div>
                 </div>
             </div>
             <a href="#" class="prev"><span>Prev</span></a>
@@ -137,11 +147,13 @@
             <div class="scrollable">
                 <div class="items">
                     <div class="item client-google"></div>
+                    <div class="item client-medtronic"></div>
                     <div class="item client-salesforce"></div>
                     <div class="item client-box"></div>
                     <div class="item client-aau"></div>
                     <div class="item client-docusign"></div>
                     <div class="item client-jdrf"></div>
+                    <div class="item client-panasonic"></div>
                 </div>
             </div>
             <a href="#" class="prev"><span>Prev</span></a>
